# bominal-care

./: .env.example  .firebaserc  .gitignore  Cargo.toml  Trunk.toml  cloudbuild.yaml  firebase.json  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
Korea_Senior_Portal_Artifacts/: 01_Executive_Summary_Korea_Senior_Portal.docx  02_Product_Service_Spec_Korea_Senior_Portal.docx  03_Agentic_LLM_Build_Prompt_Korea_Senior_Portal.md  04_Developer_Architecture_Data_Model_Integration_Guide.md  05_Regulatory_and_Source_Appendix.md  06_Stakeholder_Feature_Integration_Matrix.xlsx  README.txt
apps/mobile-caregiver/: next.config.ts  package.json  tailwind.config.ts
apps/mobile-caregiver/src/: middleware.ts
apps/mobile-caregiver/src/app/: global-error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
apps/mobile-caregiver/src/app/apply/: page.tsx
apps/mobile-caregiver/src/app/clients/: page.tsx
apps/mobile-caregiver/src/components/: ApplicantAppShell.tsx  CaregiverAppShell.tsx
apps/mobile-caregiver/src/lib/: services.ts
apps/web-family/: package.json  tailwind.config.ts  tsconfig.json
apps/web-family/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web-family/src/components/: FamilyAppShell.tsx
apps/web-family/src/lib/: services.ts
apps/web-government/: package.json  tailwind.config.ts
apps/web-government/src/app/: globals.css  layout.tsx  page.tsx
apps/web-government/src/components/: GovernmentAppShell.tsx
apps/web-government/src/lib/: services.ts
apps/web-internal/: package.json
apps/web-internal/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web-internal/src/components/: InternalAppShell.tsx
apps/web-internal/src/lib/: services.ts
apps/web-senior/: package.json  tailwind.config.ts
apps/web-senior/src/app/: globals.css  layout.tsx  page.tsx
apps/web-senior/src/components/: SeniorAppShell.tsx
apps/web-senior/src/lib/: services.ts
crates/app/: Cargo.toml
crates/app/src/: api.rs  i18n.rs  lib.rs
crates/app/src/components/: mod.rs
crates/app/src/components/data_display/: mod.rs
crates/app/src/components/feedback/: mod.rs
crates/app/src/components/forms/: mod.rs
crates/app/src/components/layout/: mod.rs
crates/app/src/components/primitives/: mod.rs
crates/app/src/components/senior/: mod.rs
crates/app/src/layouts/: applicant.rs  caregiver.rs  family.rs  government.rs  internal.rs  medical.rs  mod.rs  pharmacy.rs  senior.rs
crates/app/src/pages/: mod.rs
crates/app/src/pages/auth/: mod.rs
crates/app/src/pages/caregiver/: apply.rs  clients.rs  mod.rs  profile.rs  schedule.rs  tasks.rs
crates/app/src/pages/family/: approvals.rs  care.rs  documents.rs  eligibility.rs  help.rs  matching.rs  mod.rs  payments.rs  settings.rs
crates/app/src/pages/government/: mod.rs
crates/app/src/pages/internal/: mod.rs
crates/app/src/pages/medical/: appointments.rs  history.rs  mod.rs  patients.rs  prescriptions.rs
crates/app/src/pages/pharmacy/: fulfillment.rs  inventory.rs  mod.rs  queue.rs
crates/app/src/pages/senior/: appointments.rs  medications.rs  mod.rs  profile.rs  services.rs  settings.rs
crates/app/src/server_fns/: appointments.rs  audit.rs  care_plans.rs  caregivers.rs  consent.rs  eligibility.rs  matching.rs  medical_history.rs  medications.rs  mod.rs  notifications.rs  observability.rs  profile.rs  referrals.rs  schedule.rs
crates/db/: Cargo.toml  seed.sql
crates/db/migrations/: 0001_initial_schema.sql  0002_rls_policies.sql  0003_session_store.sql  0004_foundation.sql  0005_event_spine.sql  0006_policy_engine.sql  0007_ledger.sql  0008_consent_migration.sql  0009_identity_verification.sql  0010_gov_views.sql  0011_safety.sql  0012_his_lite.sql  0013_lifestyle.sql  0014_korean_holidays_seed.sql  0015_operational_features.sql
crates/db/src/: lib.rs
crates/db/src/queries/: access_policy.rs  allergy.rs  appointment.rs  appointment_ledger.rs  approval_step.rs  audit.rs  availability_slot.rs  care_plan.rs  care_plan_ledger.rs  caregiver_application.rs  claim.rs  clinical_encounter.rs  consent.rs  document_transfer.rs  family_relationship.rs  handoff_session.rs  identity_verification.rs  incident.rs  lab_result.rs  match_request.rs  medical_history.rs  medication.rs  medication_ledger.rs  mod.rs  notification.rs  observability.rs  platform_event.rs  prescription.rs  profile.rs  provider_organization.rs  referral.rs  service_region.rs  visit.rs
crates/server/: Cargo.toml
crates/server/src/: geofence.rs  i18n.rs  lib.rs  main.rs  session_store.rs  state.rs
crates/server/src/auth/: demo.rs  extractor.rs  mod.rs  oauth.rs  permission.rs  webauthn.rs
crates/server/src/events/: bus.rs  mod.rs
crates/server/src/events/handlers/: mod.rs  notification.rs  signal.rs
crates/server/src/events/rules/: mod.rs
crates/server/src/integrations/: mod.rs
crates/server/src/middleware/: auth_guard.rs  csrf.rs  mod.rs  rate_limit.rs  security_headers.rs  validate.rs
crates/server/src/routes/: allergies.rs  appointments.rs  audit.rs  availability.rs  benefits.rs  care_plans.rs  care_summary.rs  caregivers.rs  clinical.rs  community.rs  consent.rs  credentials.rs  dashboard.rs  dispensing.rs  emergency.rs  gov.rs  handoff.rs  incidents.rs  lab_results.rs  match_requests.rs  medical_history.rs  medications.rs  mod.rs  notifications.rs  observability.rs  prescriptions.rs  profile.rs  providers.rs  referrals.rs  system_metrics.rs  visits.rs  wellness.rs
crates/types/: Cargo.toml
crates/types/src/: common.rs  enums.rs  events.rs  inputs.rs  ledger.rs  lib.rs  medical.rs  models.rs  platform_event.rs  rbac.rs  state_machines.rs
docker/: Dockerfile.app  Dockerfile.rust  docker-compose.dev.yml  docker-compose.yml  nginx.conf
docs/superpowers/specs/: 2026-03-17-stack-modernization-design.md  2026-03-19-platform-capability-design.md  2026-03-22-two-pillar-product-spec.md  2026-03-23-operational-features-design.md
public/: manifest.json
scripts/: deploy-gcp.sh
style/: main.css
(+143 files in other folders)
