[workspace]
resolver = "2"
members = ["crates/types", "crates/db", "crates/server", "crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"

[workspace.dependencies]
# Framework
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = "0.8"
leptos_router = { version = "0.8", features = ["nightly"] }
leptos_meta = "0.8"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "compression-br", "compression-zstd", "cors", "set-header"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "time", "json", "migrate", "rust_decimal"] }

# Auth
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
oauth2 = "5"
reqwest = { version = "0.12", features = ["json"] }

# Sessions
tower-sessions = "0.15"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
validator = { version = "0.19", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
strum = { version = "0.27", features = ["derive"] }
once_cell = "1"
dotenvy = "0.15"
async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# cargo-leptos configuration
[[workspace.metadata.leptos]]
name = "bominal-care"
bin-package = "bominal-server"
lib-package = "bominal-app"
bin-features = ["ssr"]
lib-features = []
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
site-addr = "127.0.0.1:4001"
reload-port = 4002
end2end-cmd = "echo"
browserquery = "defaults"
