[package]
name = "bominal-app"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bominal-types = { path = "../types" }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
leptos_meta = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "v5", "serde", "js"] }
chrono = { workspace = true }
validator = { workspace = true }
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
