[package]
name = "bominal-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bominal-server"
path = "src/main.rs"

[dependencies]
bominal-types = { path = "../types" }
bominal-db = { path = "../db" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
# tower-sessions-sqlx-store has a tower-sessions-core version mismatch (0.14 vs 0.15).
# Using custom PgSessionStore in src/session_store.rs instead.
time = "0.3"
sqlx = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
governor = "0.8"
sha2 = "0.10"
hex = "0.4"
validator = { workspace = true }
