[package]
name = "bominal-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
validator = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
